deploy/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hans-niemann
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hans-niemann.lol
        - www.hans-niemann.lol
      secretName: hans-niemann-live-tls
  rules:
    - host: hans-niemann.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hans-niemann
                port:
                  number: 80
